@@ -14,6 +14,8 @@ git-annex (5.20140614) UNRELEASED; urgency=medium
   * importfeed: When annex.genmetadata is set, metadata from the feed
     is added to files that are imported from it.
   * Android: patch git to avoid fchmod, which fails on /sdcard.
+  * Support users who have set commit.gpgsign, by disabling gpg signatures
+    for git-annex branch commits and commits made by the assistant.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 16 Jun 2014 11:28:42 -0400
 
